--- a/index.html
+++ b/index.html
@@ -8,28 +8,29 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <header>
-        <ol>
-            <li><a href="">Головна</a></li>
-            <li><a href=""></a></li>
-            <li><a href=""></a></li>
-            
-        </ol>
-    </header>
     <div class="box">
         <h1 class="box-title">Мої улюблені страви</h1>
         <ul class="dishes">
             <li class="dish">
                 <h2>Cалат Гавайський</h2>
                 <img src="https://static.1000.menu/res/640/img/content-v2/f4/ba/31632/salat-gavaiskii-s-kuricei-ananasami_1615571905_10_max.jpg" alt="Салат Гавайський">
+                <div class="overlay">
+                    <button class="hover">Замовити</button>
+                </div>
             </li>
             <li class="dish">
                 <h2>Вінігрет</h2>
                 <img src="https://images.unian.net/photos/2020_12/1608110660-8730.jpg?0.9911833220261577" alt="Вінігрет">
+                <div class="overlay">
+                    <button class="hover">Замовити</button>
+                </div>
             </li>
             <li class="dish">
                 <h2>Бургер</h2>
                 <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTrNhoRl3xgQjcsOkb4dWulFI3aKd2hgR7MmA&usqp=CAU" alt="Бургер">
+                <div class="overlay">
+                    <button class="hover">Замовити</button>
+                </div>
             </li>
         </ul>
     </div>
